# tower-test

./: .gitignore  README.md  Towerfile  entrypoint.sh  pyproject.toml  requirements.txt
lake/: dlt_project.yml
lake/src/: scrape.py
lake/src/pipelines/linear/: source.py
lake/src/pipelines/linear/resources/: issue_relations.py  issues.py  projects.py  teams.py  utils.py
lake/src/static/: contacts.csv
src/: scrape.py
