[tool.poetry]
name = "tower"
version = "0.1.0"
description = ""
authors = ["codingcyclist <mail@codingcyclist.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.3"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
tower-cli = "^0.1.12"
duckdb = "^1.1.3"
sqlglot = "^25.30.0"
grpcio = "^1.68.0"
google-cloud-bigquery = "^3.27.0"
pyarrow = "^18.0.0"
gcsfs = "^2024.10.0"
db-dtypes = "^1.3.1"
dlt = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.2.240909"
types-requests = "^2.32.0.20240914"


[tool.poetry.group.local.dependencies]
dlt-plus = {path = ".dist/dlt_plus-0.2.5.tar.gz"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
